DMP-2281 added GET admin regions endpoint
