# src/main/resources/openapi/courthouse.yaml
@@ -40,7 +40,31 @@ paths:
                 $ref: '#/components/schemas/CourtList'
         '500':
           description: Internal Server Error
+  /admin/regions:
+    get:
+      tags:
+        - Courthouses
+      summary: Gets all regions
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AdminRegionList'
+        '404':
+          description: Not Found
+          content:
+            application/json+problem:
+              schema:
+                $ref: './problem.yaml'
 
+        '500':
+          description: Internal Server Error
+          content:
+            application/json+problem:
+              schema:
+                $ref: './problem.yaml'
   /admin/courthouses/{courthouse_id}:
     get:
       tags:
@@ -148,6 +172,18 @@ components:
         region_id:
           type: integer
           example: 0
+    AdminRegion:
+      type: object
+      properties:
+        id:
+          type: integer
+          example: 0
+        name:
+          type: string
+    AdminRegionList:
+      type: array
+      items:
+        $ref: '#/components/schemas/AdminRegion'
     AdminCourthouse:
       allOf:
         - $ref: '#/components/schemas/ExtendedCourthouse'
